Migrate to Cloth Config's ValueAnimator, and add option to cache entry renders

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -20,6 +20,7 @@
   "text.rei.config.menu.display.left_side_mob_effects": "Left Side Mob Effects",
   "text.rei.config.menu.display.left_side_panel": "Left Side Panel",
   "text.rei.config.menu.display.scrolling_side_panel": "Scrolling Side Panel",
+  "text.rei.config.menu.display.caching_entry_rendering": "Caching Entry Rendering",
   "text.rei.config.menu.display.side_search_field": "Side Search Field",
   "text.rei.config.menu.display.syntax_highlighting": "Syntax Highlighting",
   "text.rei.config.menu.config": "More Options...",
@@ -245,6 +246,8 @@
   "config.roughlyenoughitems.layout.entryPanelOrdering": "Entry Panel Ordering:",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Faster Entry Rendering:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Caching Entry Rendering:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "This option will improve performance for rendering entries for up to 5x, with an average of 2.5x performance gain. However, this will break enchantment glints and animated textures.",
   "config.roughlyenoughitems.itemCheatingMode": "Item Cheating Amount:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normal",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "Inverted",
