--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -187,6 +187,10 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "Upper",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "Lower",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Merge Displays with Equal Contents:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Favorites Add Widget Button:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Always Invisible",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Auto Hide",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Always Visible",
   "config.roughlyenoughitems.filteredEntries.selectAll": "Select All",
   "config.roughlyenoughitems.filteredEntries.selectNone": "Unselect All",
   "config.roughlyenoughitems.filteredEntries.hide": "Hide Selected",
