--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -130,6 +130,9 @@
   "text.rei.tiny_potato": "Tiny Potatoz",
   "text.rei.add_favorite_widget": "Add...",
   "text.rei.dispose_here": "Dispose Here",
+  "text.rei.crash.title": "REI Crashed!",
+  "text.rei.crash.description": "§cRoughly Enough Item just experienced a crash during \"%s\".\n\n§fDetails of the crashed are displayed below. Please identify the mod that caused the crash and report it to the mod author, alongside the crash log provided below.\n\nIf you believe this crash is caused by a bug in Roughly Enough Item, please report it to our issue tracker.\n\n§6Thanks for your help!\n",
+  "text.rei.crash.crash_report": "Open Crash Report",
   "favorite.section.gamemode": "Game Mode",
   "favorite.section.weather": "Weather",
   "tooltip.rei.fluid_amount": "§7%d Unit",
