--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -278,6 +278,9 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Plain (Underscored)",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Colorful",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Colorful (Underscored)",
+  "config.roughlyenoughitems.isFocusModeZoomed": "Entry Focus Mode:",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Zoomed",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Highlighted",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Should Filter Displays:",
   "config.roughlyenoughitems.filteringScreen": "Customized Filtering",
   "config.roughlyenoughitems.filteringRulesScreen": "Customized Filtering Rules",
