--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -95,6 +95,12 @@
   "text.rei.gamemode_button.tooltip.entry": "Switch to %s",
   "text.rei.weather_button.tooltip.dropdown": "Switch Weather: Dropdown",
   "text.rei.weather_button.tooltip.entry": "Switch to %s",
+  "text.rei.time_button.tooltip.dropdown": "Switch Time: Dropdown",
+  "text.rei.time_button.tooltip.entry": "Switch to %s",
+  "text.rei.time_button.name.morn": "Morning",
+  "text.rei.time_button.name.noon": "Noon",
+  "text.rei.time_button.name.evening": "Evening",
+  "text.rei.time_button.name.night": "Night",
   "text.rei.reload_config": "Reload Plugins",
   "text.rei.config.is.reloading": "Plugins are reloading!",
   "text.rei.enabled": "Yes",
@@ -135,6 +141,7 @@
   "text.rei.crash.crash_report": "Open Crash Report",
   "favorite.section.gamemode": "Game Mode",
   "favorite.section.weather": "Weather",
+  "favorite.section.time": "Time",
   "tooltip.rei.fluid_amount": "§7%d Unit",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7Drag this up to add this to your favorites!",
