--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -158,6 +158,7 @@
   "config.roughlyenoughitems.functionality": "Functionality",
   "config.roughlyenoughitems.advanced": "Advanced",
   "config.roughlyenoughitems.cheating": "Cheating:",
+  "config.roughlyenoughitems.cheating.when_creative": "During Creative Mode",
   "config.roughlyenoughitems.favoritesEnabled": "Favorites Enabled:",
   "config.roughlyenoughitems.keyBindings": "Keybindings",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "Show Recipe:",
