Add search caching hint

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/cs_cz.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/cs_cz.json
@@ -13,6 +13,11 @@
   "text.rei.not.fully.initialized.tooltip": "Chybějící fáze: %s\nPokud toto nezmizí,\nzkuste hledat podporu s logy!",
   "text.rei.inventory.highlighting.enabled": "Zvýraznění inventáře zapnuto",
   "text.rei.inventory.highlighting.enabled.tooltip": "Tenhle režim dělá sloty neodpovídající\nfiltru hledání šedé.\nDvojitým kliknutím na vyhledávací lištu přepnete.",
+  "text.rei.config.menu.dark_theme": "Tmavý motiv",
+  "text.rei.config.menu.craftable_filter": "Filtrovat vyrobitelné",
+  "text.rei.config.menu.display": "Nastavení Zobrazení...",
+  "text.rei.config.menu.display.remove_recipe_book": "Odstranit knihu receptů",
+  "text.rei.config.menu.config": "Více Možností...",
   "category.rei.crafting": "Vyrábění",
   "category.rei.smelting": "Vypékání",
   "category.rei.smelting.fuel": "Palivo",
@@ -39,6 +44,8 @@
   "category.rei.beacon_payment": "Aktivace majáku",
   "category.rei.tilling": "Zorání půdy",
   "category.rei.pathing": "Vytvoření pěšiny",
+  "category.rei.waxing": "Voskovaní",
+  "category.rei.oxidizing": "Oxidujúci",
   "category.rei.information": "Informace",
   "text.rei.composting.chance": "§e%d%% šance",
   "text.rei.composting.page": "Strana %d",
