--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/fr_fr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/fr_fr.json
@@ -5,7 +5,7 @@
   "text.rei.cheating_limited_enabled": "§bTriche activée (commandes activées)",
   "text.rei.cheating_enabled_no_perms": "§7Triche §cactivée §7(aucune permission)",
   "text.rei.cheating_limited_creative_enabled": "§aTriche activée (en mode Créatif)",
-  "text.rei.no_permission_cheat": "Les permissions d'opérateur sont requises pour obtenir des objets",
+  "text.rei.no_permission_cheat": "Les permissions d'opérateur sont requises pour se donner des objets",
   "text.rei.search.field.suggestion": "Rechercher...",
   "text.rei.feedback": "Avez-vous des retours à faire au developeur de REI ? %s pour envoyer vos retours!",
   "text.rei.feedback.link": "Cliquez ici pour visiter le formulaire Google",
@@ -14,9 +14,11 @@
   "text.rei.inventory.highlighting.enabled": "Surbrillance de l'inventaire activé",
   "text.rei.inventory.highlighting.enabled.tooltip": "Cela rend les emplacements non correspondant grisés.\nDouble-cliquez sur la barre de recherche pour activer ce mode.",
   "text.rei.config.menu.dark_theme": "Thème sombre",
+  "text.rei.config.menu.display": "Paramètres d'Affichages...",
   "text.rei.config.menu.display.remove_recipe_book": "Enlever le livre des recettes",
   "text.rei.config.menu.display.left_side_panel": "Panneau gauche",
   "text.rei.config.menu.display.scrolling_side_panel": "Défilement du panneau latéral",
+  "text.rei.config.menu.config": "Plus d'Options...",
   "category.rei.crafting": "Fabrication",
   "category.rei.smelting": "Cuisson",
   "category.rei.smelting.fuel": "Combustible",
@@ -58,6 +60,7 @@
   "ordering.rei.name": "Nom",
   "ordering.rei.item_groups": "Thème",
   "text.auto_craft.move_items": "Transférer les objets",
+  "text.auto_craft.move_items.tooltip": "Ctrl-Clique pour Déplacer des Items",
   "text.auto_craft.move_items.yog": "NullPointerException générée !",
   "error.rei.transfer.too_small": "Impossible de déplacer les objets vers une grille de %dx%d.",
   "error.rei.not.on.server": "REI n'est pas installé sur le serveur.",
@@ -82,6 +85,10 @@
   "text.rei.gamemode_button.tooltip.entry": "Basculer vers %s",
   "text.rei.weather_button.tooltip.dropdown": "Changer la météo : liste déroulante",
   "text.rei.weather_button.tooltip.entry": "Basculer vers %s",
+  "text.rei.time_button.name.morn": "Matin",
+  "text.rei.time_button.name.noon": "Midi",
+  "text.rei.time_button.name.evening": "Soir",
+  "text.rei.time_button.name.night": "Nuit",
   "text.rei.reload_config": "Recharger les plugins",
   "text.rei.config.is.reloading": "Les plugins sont en cours de rechargement !",
   "text.rei.enabled": "Oui",
@@ -116,8 +123,12 @@
   "text.rei.subsets": "Sous-ensembles",
   "text.rei.tiny_potato": "P'tites patates",
   "text.rei.add_favorite_widget": "Ajouter...",
+  "text.rei.dispose_here": "Placer ici",
+  "text.rei.crash.title": "REI a planté !",
+  "text.rei.crash.crash_report": "Ouvrir le Rapport de Crash",
   "favorite.section.gamemode": "Mode de jeu",
   "favorite.section.weather": "Météo",
+  "favorite.section.time": "Temps",
   "tooltip.rei.fluid_amount": "§7%d unités",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7Faites glisser vers le haut pour l'ajouter à vos favoris !",
@@ -134,6 +145,7 @@
   "config.roughlyenoughitems.functionality": "Fonctionnalité",
   "config.roughlyenoughitems.advanced": "Avancé",
   "config.roughlyenoughitems.cheating": "Triche :",
+  "config.roughlyenoughitems.cheating.when_creative": "En Mode Créatif",
   "config.roughlyenoughitems.favoritesEnabled": "Favoris activés :",
   "config.roughlyenoughitems.keyBindings": "Raccourcis clavier",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "Afficher la recette :",
@@ -173,6 +185,9 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "Plus haut",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "Bas",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Fusionner les Affichages avec des Contenus Equivalents:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Toujours Invisible",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Cacher Automatiquement",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Toujours Visible",
   "config.roughlyenoughitems.filteredEntries.selectAll": "Tout sélectionner",
   "config.roughlyenoughitems.filteredEntries.selectNone": "Tout désélectionner",
   "config.roughlyenoughitems.filteredEntries.hide": "Masquer",
@@ -253,6 +268,10 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Simple (souligné)",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Coloré",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Coloré (souligné)",
+  "config.roughlyenoughitems.isFocusModeZoomed": "Entrée en Mode Focus :",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Zoomé",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Surligné",
+  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Le Filtre Devrait Afficher :",
   "config.roughlyenoughitems.filteringScreen": "Filtrage personnalisé",
   "config.roughlyenoughitems.filteringRulesScreen": "Règles de filtrage personnalisées",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Créer une règle de filtrage",
