--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/lol_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/lol_us.json
@@ -93,6 +93,7 @@
   "text.rei.tiny_potato": "oh hi tiny poTATOz k?",
   "favorite.section.weather": "Weethr",
   "tooltip.rei.fluid_amount": "§7%d Unit",
+  "tooltip.rei.drag_to_add_favorites": "Drag dis up 2 add dis 2 ur favoritez!",
   "msg.rei.copied_recipe_id": "Copied Wecipe Identifiew",
   "msg.rei.recipe_id_details": "Wecipe ID: %s",
   "msg.rei.exported_recipe": "exportd recipe",
@@ -106,6 +107,7 @@
   "config.roughlyenoughitems.functionality": "funcTIONalitie",
   "config.roughlyenoughitems.advanced": "oH hi ADvancd plz?",
   "config.roughlyenoughitems.cheating": "Cheating:",
+  "config.roughlyenoughitems.cheating.when_creative": "Durin creativ mode",
   "config.roughlyenoughitems.favoritesEnabled": "favoritez inableD:",
   "config.roughlyenoughitems.keyBindings": "keybindingz",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "show recipe:",
