--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
@@ -7,9 +7,9 @@
   "text.rei.cheating_limited_creative_enabled": "§aAtivar trapaças (modo Criativo)",
   "text.rei.no_permission_cheat": "Você precisa ser um operador para obter itens",
   "text.rei.search.field.suggestion": "Buscar...",
-  "text.rei.feedback": "Deseja enviar um feedback ao desenvolvedor do REI? %s para enviá-lo!",
-  "text.rei.feedback.link": "Clique aqui para acessar o formulário de feedback",
-  "text.rei.not.fully.initialized": "REI ainda não inicializado completamente!",
+  "text.rei.feedback": "Deseja enviar feedback ao desenvolvedor do REI? %s para enviá-lo!",
+  "text.rei.feedback.link": "Acesse o formulário de feedback",
+  "text.rei.not.fully.initialized": "O REI ainda não está completamente inicializado!",
   "text.rei.not.fully.initialized.tooltip": "Etapas restantes: %s\nSe isso continuar,\nverifique os registros!\n",
   "text.rei.inventory.highlighting.enabled": "Destaque de inventário ativado",
   "text.rei.inventory.highlighting.enabled.tooltip": "Os espaços não encontrados na busca\nficarão da cor cinza.\nClique duas vezes na barra de busca para ativar o modo.",
@@ -17,6 +17,11 @@
   "text.rei.config.menu.craftable_filter": "Fabricáveis",
   "text.rei.config.menu.display": "Exibição...",
   "text.rei.config.menu.display.remove_recipe_book": "Ocultar livro de receitas",
+  "text.rei.config.menu.display.left_side_mob_effects": "Efeitos de criaturas (esquerdo)",
+  "text.rei.config.menu.display.left_side_panel": "Painel do lado esquerdo",
+  "text.rei.config.menu.display.scrolling_side_panel": "Painel de rolagem lateral",
+  "text.rei.config.menu.display.side_search_field": "Campo de busca lateral",
+  "text.rei.config.menu.display.syntax_highlighting": "Destaque de sintaxe",
   "text.rei.config.menu.config": "Outras...",
   "category.rei.crafting": "Fabricáveis",
   "category.rei.smelting": "Fundíveis",
@@ -52,23 +57,26 @@
   "text.rei.composting.chance": "§e%d%% de chances",
   "text.rei.composting.page": "Pág. %d",
   "text.rei.config": "Definições",
-  "text.rei.config_tooltip": "Abrir menu de definições\n§7Shift+clique para alternar o modo trapaça",
+  "text.rei.config_tooltip": "Abrir menu de definições\n§7Shift + clique para alternar o modo trapaça",
   "text.rei.cheat_items": "{player_name} recebeu {item_count} unidade(s) de [{item_name}§f].",
   "text.rei.failed_cheat_items": "§cFalha ao obter itens.",
   "text.rei.too_long_nbt": "§cO NBT do item é longo demais para ser aplicado ao modo multijogador.",
+  "text.rei.tag_match": "Tag aceita: #%s",
   "text.rei.performance": "Análise de desempenho",
   "ordering.rei.ascending": "Crescente",
   "ordering.rei.descending": "Descrescente",
   "ordering.rei.registry": "Registro",
   "ordering.rei.name": "Nome",
-  "ordering.rei.item_groups": "Conjuntos de itens",
+  "ordering.rei.item_groups": "Grupos de itens",
   "text.auto_craft.move_items": "Mover itens",
+  "text.auto_craft.move_items.tooltip": "Ctrl + clique para mover itens",
   "text.auto_craft.move_items.yog": "Gerar NullPointerException!",
   "error.rei.transfer.too_small": "Não é possível mover os itens para uma grade %dx%d.",
   "error.rei.not.on.server": "O REI não está disponível no servidor.",
-  "error.rei.not.enough.materials": "Materiais insuficientes.",
+  "error.rei.not.enough.materials": "Matéria-prima insuficiente.",
   "error.rei.internal.error": "Erro interno: %s",
   "error.rei.recipe.not.unlocked": "Receita inacessível no livro de receitas.",
+  "error.rei.not.supported.move.items": "Não é possível mover itens com essa receita e contêiner.",
   "error.rei.no.handlers.applicable": "Processo indisponível.",
   "error.rei.multi.errors": "Vários erros:",
   "rei.rei.no.slot.in.inv": "Espaço insuficiente no inventário.",
@@ -78,13 +86,13 @@
   "text.rei.credits": "Créditos",
   "text.rei.left_arrow": "<",
   "text.rei.right_arrow": ">",
-  "text.rei.view_all_categories": "Ver todas as categorias",
+  "text.rei.view_all_categories": "Ver todas",
   "text.rei.go_back_first_page": "Voltar ao começo",
   "text.rei.choose_page": "Escolher página",
   "text.rei.shift_click_to": "Clique + Shift para %s",
-  "text.rei.gamemode_button.tooltip.dropdown": "Alterar modo de jogo: Dropdown",
+  "text.rei.gamemode_button.tooltip.dropdown": "Alterar modo de jogo: Lista",
   "text.rei.gamemode_button.tooltip.entry": "Mudar para %s",
-  "text.rei.weather_button.tooltip.dropdown": "Alterar tempo: Dropdown",
+  "text.rei.weather_button.tooltip.dropdown": "Alterar tempo: Lista",
   "text.rei.weather_button.tooltip.entry": "Mudar para %s",
   "text.rei.reload_config": "Recarregar plug-ins",
   "text.rei.config.is.reloading": "Recarregando plug-ins!",
@@ -130,12 +138,12 @@
   "msg.rei.recipe_id_details": "ID: %s",
   "msg.rei.exported_recipe": "Receita exportada",
   "msg.rei.exported_recipe.desc": "Verifique a pasta \"rei_exports\".",
-  "subsets.rei.roughlyenoughitems.all_entries": "Todas as entradas",
+  "subsets.rei.roughlyenoughitems.all_entries": "Todas",
   "subsets.rei.roughlyenoughitems.item_groups": "Guias do Criativo",
   "_comment": "Descrições de definições",
   "config.roughlyenoughitems.title": "Definições do Roughly Enough Items",
   "config.roughlyenoughitems.basics": "Básico",
-  "config.roughlyenoughitems.appearance": "Aparência",
+  "config.roughlyenoughitems.appearance": "Estilo",
   "config.roughlyenoughitems.functionality": "Funções",
   "config.roughlyenoughitems.advanced": "Avançado",
   "config.roughlyenoughitems.cheating": "Trapaças:",
@@ -153,7 +161,7 @@
   "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "Tela anterior:",
   "config.roughlyenoughitems.cheatingStyle": "Estilo de trapaça:",
   "config.roughlyenoughitems.cheatingStyle.grab": "Pegar",
-  "config.roughlyenoughitems.cheatingStyle.give": "Give",
+  "config.roughlyenoughitems.cheatingStyle.give": "Dar",
   "config.roughlyenoughitems.motion": "Definições de animações",
   "config.roughlyenoughitems.motion.configScreenAnimation": "Animação da tela de def.:",
   "config.roughlyenoughitems.motion.creditsScreenAnimation": "Animação da tela de créditos:",
@@ -193,19 +201,19 @@
   "config.roughlyenoughitems.recipeBorder": "Canto da receita:",
   "config.roughlyenoughitems.recipeBorder.lighter": "Claro",
   "config.roughlyenoughitems.recipeBorder.default": "Padrão",
-  "config.roughlyenoughitems.recipeBorder.none": "Nenhum",
+  "config.roughlyenoughitems.recipeBorder.none": "Não",
   "config.roughlyenoughitems.layout.maxRecipesPerPage": "Máximo de receitas por página:",
   "config.roughlyenoughitems.layout.maxRecipesPageHeight": "Altura máxima da página de receitas:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Posição do painel de entradas",
+  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Posição do painel de entradas:",
   "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Esquerdo",
   "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "Direito",
   "config.roughlyenoughitems.search.tooltipSearch": "Busca por descrição (#):",
   "config.roughlyenoughitems.search.tagSearch": "Busca por tag ($):",
   "config.roughlyenoughitems.search.identifierSearch": "Busca por ID (*):",
-  "config.roughlyenoughitems.search.modSearch": "Busca de mod (@):",
-  "config.roughlyenoughitems.search_mode.always": "Sempre ativado",
+  "config.roughlyenoughitems.search.modSearch": "Busca por mod (@):",
+  "config.roughlyenoughitems.search_mode.always": "Sempre ativo",
   "config.roughlyenoughitems.search_mode.prefix": "Ao usar prefixo",
-  "config.roughlyenoughitems.search_mode.never": "Sempre desativado",
+  "config.roughlyenoughitems.search_mode.never": "Sempre inativo",
   "config.roughlyenoughitems.layout.debugRenderTimeRequired": "Depuração do painel de entradas:",
   "config.roughlyenoughitems.search.debugSearchTimeRequired": "Modo de busca por depuração:",
   "config.roughlyenoughitems.accessibility.resizeDynamically": "Escala dinâmica:",
@@ -219,14 +227,15 @@
   "config.roughlyenoughitems.disableRecipeBook": "Livro de receitas padrão:",
   "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNão",
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aSim",
+  "config.roughlyenoughitems.leftSideMobEffects": "Posição de efeitos de criaturas:",
   "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "Esquerda",
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Direita (padrão)",
-  "config.roughlyenoughitems.fixTabCloseContainer": "Corrigir o contêiner de guias padrão (livro de receitas desativado):",
+  "config.roughlyenoughitems.fixTabCloseContainer": "Corrigir contêiner de guias padrão (livro de receitas desativado):",
   "config.roughlyenoughitems.lighterButtonHover": "Cursor mínimo do botão:",
   "config.roughlyenoughitems.layout.enableCraftableOnlyButton": "Filtro (fabricáveis):",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Botões utilitários:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Comando do modo de jogo:",
-  "config.roughlyenoughitems.commands.giveCommand": "Comando Give:",
+  "config.roughlyenoughitems.commands.giveCommand": "Comando give:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Carregar plug-in padrão:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cNão (perigoso)",
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "Thread de recarga:",
