--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
@@ -13,6 +13,8 @@
   "text.rei.not.fully.initialized.tooltip": "初始化未完成！缺失加载阶段：%s\n若该提示长时间存在，\n请用日志文件寻求帮助！",
   "text.rei.inventory.highlighting.enabled": "物品栏高亮已开启",
   "text.rei.inventory.highlighting.enabled.tooltip": "不符合搜索关键字的物品栏将呈现灰色背景。\n双击搜索栏以开关此模式。",
+  "text.rei.caching.search": "正在缓存搜索结果...",
+  "text.rei.caching.search.step": "步骤 %d/%d (%s%%):",
   "text.rei.config.menu.dark_theme": "深色主题",
   "text.rei.config.menu.craftable_filter": "合成过滤器",
   "text.rei.config.menu.display": "显示设置...",
@@ -20,6 +22,7 @@
   "text.rei.config.menu.display.left_side_mob_effects": "左侧状态效果",
   "text.rei.config.menu.display.left_side_panel": "左侧面板",
   "text.rei.config.menu.display.scrolling_side_panel": "滚动侧面板",
+  "text.rei.config.menu.display.caching_entry_rendering": "缓存条目渲染",
   "text.rei.config.menu.display.side_search_field": "侧边搜索框",
   "text.rei.config.menu.display.syntax_highlighting": "语法加亮",
   "text.rei.config.menu.config": "更多选项...",
@@ -94,7 +97,14 @@
   "text.rei.gamemode_button.tooltip.entry": "切换至 %s",
   "text.rei.weather_button.tooltip.dropdown": "切换天气：菜单",
   "text.rei.weather_button.tooltip.entry": "切换至 %s",
+  "text.rei.time_button.tooltip.dropdown": "切换时间：菜单",
+  "text.rei.time_button.tooltip.entry": "切换至 %s",
+  "text.rei.time_button.name.morn": "上午",
+  "text.rei.time_button.name.noon": "中午",
+  "text.rei.time_button.name.evening": "傍晚",
+  "text.rei.time_button.name.night": "夜晚",
   "text.rei.reload_config": "重载插件",
+  "text.rei.reload_search": "重新加载搜索",
   "text.rei.config.is.reloading": "插件正在重新加载！",
   "text.rei.enabled": "是",
   "text.rei.disabled": "否",
@@ -122,15 +132,22 @@
   "text.rei.jei_compat": "JEI 兼容模式",
   "text.rei.jei_compat.false": "JEI 兼容模式：禁用",
   "text.rei.jei_compat.true": "JEI 兼容模式：启用",
-  "text.rei.jei_compat.sub": "您想要启用 JEI 兼容模式 %s§7吗？\n§7它将允许从这些模组加载 JEI 插件：\n%s\n\n§7然而，REI 的 JEI 兼容模式并不完善，可能将会出现很多问题。\n§c风险自负！",
+  "text.rei.jei_compat.sub": "您想要启用 JEI 兼容模式 %s §7吗？\n§7它将允许从这些模组加载 JEI 插件：\n%s\n\n§7然而，REI 的 JEI 兼容模式并不完善，可能将会出现很多问题。\n§c风险自负！",
   "text.rei.jei_compat.sub.stability": "§c§l(ALPHA)",
   "text.rei.view_recipes_for": "查看 %s 的配方",
   "text.rei.subsets": "项目分类",
   "text.rei.tiny_potato": "小土豆",
   "text.rei.add_favorite_widget": "添加...",
   "text.rei.dispose_here": "在这里丢弃",
+  "text.rei.crash.title": "REI 已崩溃!",
+  "text.rei.crash.description": "§cRoughly Enough Item刚刚在“%s”期间发生崩溃。\n\n§f下面是这次崩溃的详细信息。 请指明导致崩溃的模组，并将其报告给模组作者，同时提供下面的崩溃日志。\n\n如果你认为这次崩溃是由一个REI的错误造成的，请向我们的问题跟踪器报告。\n\n§6感谢您的帮助！",
+  "text.rei.crash.crash_report": "查看崩溃报告",
+  "text.rei.changelog.title": "REI 更新日志",
+  "text.rei.changelog.error.missingChangelogFile": "缺少更新日志文件！",
+  "text.rei.changelog.error.failedToReadChangelogFile": "无法读取更新日志文件！",
   "favorite.section.gamemode": "游戏模式",
   "favorite.section.weather": "天气",
+  "favorite.section.time": "时间",
   "tooltip.rei.fluid_amount": "§7%d 单位",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7拖动这个向上来将它添加到您的收藏夹!",
@@ -147,15 +164,16 @@
   "config.roughlyenoughitems.functionality": "功能",
   "config.roughlyenoughitems.advanced": "高级",
   "config.roughlyenoughitems.cheating": "是否作弊:",
+  "config.roughlyenoughitems.cheating.when_creative": "创造模式时",
   "config.roughlyenoughitems.favoritesEnabled": "是否启用收藏夹：",
   "config.roughlyenoughitems.keyBindings": "快捷键",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "查看配方：",
   "config.roughlyenoughitems.keyBindings.hideKeybind": "隐藏/显示 REI：",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "查看用途:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "下一页:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "上一页:",
-  "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "选中搜索框:",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "复制配方ID:",
+  "config.roughlyenoughitems.keyBindings.usageKeybind": "查看用途：",
+  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "下一页：",
+  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "上一页：",
+  "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "选中搜索框：",
+  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "复制配方ID：",
   "config.roughlyenoughitems.keyBindings.exportImageKeybind": "导出配方：",
   "config.roughlyenoughitems.keyBindings.favoriteKeybind": "收藏物品：",
   "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "到前一屏幕：",
@@ -186,6 +204,10 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "上方",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "下方",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "合并相同的内容：",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "收藏夹自选按钮：",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "总是不可见",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "自动隐藏",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "总是可见",
   "config.roughlyenoughitems.filteredEntries.selectAll": "选择所有",
   "config.roughlyenoughitems.filteredEntries.selectNone": "取消选择",
   "config.roughlyenoughitems.filteredEntries.hide": "隐藏所选",
@@ -245,6 +267,8 @@
   "config.roughlyenoughitems.layout.entryPanelOrdering": "条目列表排序：",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "更快项目绘图：",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "缓存条目渲染：",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "此选项将提高渲染条目时的性能，性能增益最多为5倍，平均为2倍。但是这将破坏附魔效果和带动画的纹理。",
   "config.roughlyenoughitems.itemCheatingMode": "物品作弊数量:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "标准",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "反转",
@@ -268,6 +292,9 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "无色（下划线）",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "彩色",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "彩色（下划线）",
+  "config.roughlyenoughitems.isFocusModeZoomed": "条目焦点模式：",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "缩放",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "加亮",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "应过滤显示：",
   "config.roughlyenoughitems.filteringScreen": "自定义过滤器",
   "config.roughlyenoughitems.filteringRulesScreen": "自定义过滤规则",
