--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
@@ -13,6 +13,8 @@
   "text.rei.not.fully.initialized.tooltip": "初始化未完成！缺失加載階段：%s\n若該提示長時間留存，\n請用日誌檔案尋求協助！",
   "text.rei.inventory.highlighting.enabled": "物品欄突顯顯示已啟用",
   "text.rei.inventory.highlighting.enabled.tooltip": "不符合搜尋關鍵字的物品將顯示為灰色背景。\n雙擊搜尋欄以開啟/關閉該模式。",
+  "text.rei.caching.search": "正在緩存搜尋結果...",
+  "text.rei.caching.search.step": "步驟 %d/%d (%s%%):",
   "text.rei.config.menu.dark_theme": "深色主題",
   "text.rei.config.menu.craftable_filter": "合成物品篩選器",
   "text.rei.config.menu.display": "介面設定...",
@@ -20,6 +22,7 @@
   "text.rei.config.menu.display.left_side_mob_effects": "左側狀態效果",
   "text.rei.config.menu.display.left_side_panel": "左側面板",
   "text.rei.config.menu.display.scrolling_side_panel": "滑動面板",
+  "text.rei.config.menu.display.caching_entry_rendering": "緩存項目繪圖",
   "text.rei.config.menu.display.side_search_field": "側邊搜尋欄",
   "text.rei.config.menu.display.syntax_highlighting": "語法突出顯示",
   "text.rei.config.menu.config": "更多選項…",
@@ -94,7 +97,14 @@
   "text.rei.gamemode_button.tooltip.entry": "切換至 %s",
   "text.rei.weather_button.tooltip.dropdown": "切換天氣：選單",
   "text.rei.weather_button.tooltip.entry": "切換至 %s",
+  "text.rei.time_button.tooltip.dropdown": "切換時間：選單",
+  "text.rei.time_button.tooltip.entry": "切換至 %s",
+  "text.rei.time_button.name.morn": "上午",
+  "text.rei.time_button.name.noon": "中午",
+  "text.rei.time_button.name.evening": "傍晚",
+  "text.rei.time_button.name.night": "夜晚",
   "text.rei.reload_config": "重載插件",
+  "text.rei.reload_search": "重新加載搜尋",
   "text.rei.config.is.reloading": "正在重新載入插件！",
   "text.rei.enabled": "是",
   "text.rei.disabled": "否",
@@ -129,8 +139,14 @@
   "text.rei.tiny_potato": "迷你馬鈴薯",
   "text.rei.add_favorite_widget": "加入...",
   "text.rei.dispose_here": "在這裡丟棄",
+  "text.rei.crash.title": "REI 已崩潰!",
+  "text.rei.crash.crash_report": "查看錯誤日誌",
+  "text.rei.changelog.title": "REI 更新日誌",
+  "text.rei.changelog.error.missingChangelogFile": "更新日誌檔案遺失",
+  "text.rei.changelog.error.failedToReadChangelogFile": "讀取更新日誌檔案失敗！",
   "favorite.section.gamemode": "遊戲模式",
   "favorite.section.weather": "天氣",
+  "favorite.section.time": "時間",
   "tooltip.rei.fluid_amount": "§7%d 單位",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7將這個拖曳至上方以新增至我的最愛！",
@@ -147,6 +163,7 @@
   "config.roughlyenoughitems.functionality": "功能",
   "config.roughlyenoughitems.advanced": "進階",
   "config.roughlyenoughitems.cheating": "作弊模式：",
+  "config.roughlyenoughitems.cheating.when_creative": "僅限創造模式",
   "config.roughlyenoughitems.favoritesEnabled": "啟用我的最愛：",
   "config.roughlyenoughitems.keyBindings": "快速鍵",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "顯示合成配方：",
@@ -186,6 +203,10 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "上方",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "下方",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "合併相同的內容：",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "我的最愛自選按鈕：",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "永遠不可見",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "自動隱藏",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "永遠可見",
   "config.roughlyenoughitems.filteredEntries.selectAll": "選取全部",
   "config.roughlyenoughitems.filteredEntries.selectNone": "取消全選",
   "config.roughlyenoughitems.filteredEntries.hide": "隱藏所選",
@@ -245,6 +266,8 @@
   "config.roughlyenoughitems.layout.entryPanelOrdering": "物品列表排序：",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "較快的物品顯示：",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "緩存項目繪圖：",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "此選項將提高渲染項目時的性能，性能增益最多為5倍，平均為2倍。但是這將破壞附魔效果和帶動畫的項目。",
   "config.roughlyenoughitems.itemCheatingMode": "作弊物品取得數量：",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "一般",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "反向",
@@ -268,6 +291,9 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "無色加底線",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "彩色",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "彩色加底線",
+  "config.roughlyenoughitems.isFocusModeZoomed": "物品焦點模式：",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "縮放",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "螢光",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "應過濾顯示：",
   "config.roughlyenoughitems.filteringScreen": "自訂篩選",
   "config.roughlyenoughitems.filteringRulesScreen": "自訂篩選條件",
