--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -13,6 +13,8 @@
   "text.rei.not.fully.initialized.tooltip": "Missing stages: %s\nIf this does not go away,\ntry looking for support with the logs!",
   "text.rei.inventory.highlighting.enabled": "Inventory Highlighting On",
   "text.rei.inventory.highlighting.enabled.tooltip": "This makes slots that does not match\nthe search filter gray.\nDouble click the search bar to toggle this mode.",
+  "text.rei.caching.search": "REI caching search results...",
+  "text.rei.caching.search.step": "Step %d/%d (%s%%):",
   "text.rei.config.menu.dark_theme": "Dark Theme",
   "text.rei.config.menu.craftable_filter": "Craftable Filter",
   "text.rei.config.menu.display": "Display Settings...",
@@ -102,6 +104,7 @@
   "text.rei.time_button.name.evening": "Evening",
   "text.rei.time_button.name.night": "Night",
   "text.rei.reload_config": "Reload Plugins",
+  "text.rei.reload_search": "Reload Search",
   "text.rei.config.is.reloading": "Plugins are reloading!",
   "text.rei.enabled": "Yes",
   "text.rei.disabled": "No",
